config/resultingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "envoy-ingress"
  namespace: "ingestion-tool"
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ingestion-public-ip
    #networking.gke.io/managed-certificates: mng-cert-terpel-enpoints
spec:
  rules:
    - host: 'ingestion-a.endpoints.grupodot-estudio-certificacion.cloud.goog'
      http:
        paths:
          - path: "/*"
            backend:
              serviceName: "ms-ui-serv"
              servicePort: 5000
          - path: "/api/*"
            backend:
              serviceName: "ms-controller-serv"
              servicePort: 5000
